--- a/_config.yml
+++ b/_config.yml
@@ -84,3 +84,8 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
